--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>RiseApp : Home</title>
+    <title>RiseApp</title>
     <!-- Favicon -->
     <link
       rel="shortcut icon"
@@ -229,8 +229,9 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="mu-video-area">
-                  <h2>Watch Promo Video</h2>
-                  <a class="mu-video-play-btn" href="#"
+									<!-- <h2>Watch Promo Video</h2> -->
+									<h2>Promo Video Coming Soon!</h2>
+                  <a class="mu-video-play-btn" style="pointer-events: none;" href="#"
                     ><i class="fa fa-play" aria-hidden="true"></i
                   ></a>
                 </div>
@@ -420,18 +421,10 @@
                       </div>
                       <div id="collapseOne" class="panel-collapse collapse in">
                         <div class="panel-body">
-                          Anim pariatur cliche reprehenderit, enim eiusmod high
-                          life accusamus terry richardson ad squid. 3 wolf moon
-                          officia aute, non cupidatat skateboard dolor brunch.
-                          Food truck quinoa nesciunt laborum eiusmod. Brunch 3
-                          wolf moon tempor, sunt aliqua put a bird on it squid
-                          single-origin coffee nulla assumenda shoreditch et.
-                          Nihil anim keffiyeh helvetica, craft beer labore wes
-                          anderson cred nesciunt sapiente ea proident. Ad vegan
-                          excepteur butcher vice lomo. Leggings occaecat craft
-                          beer farm-to-table, raw denim aesthetic synth nesciunt
-                          you probably haven't heard of them accusamus labore
-                          sustainable VHS.
+														RiseApp is a social platform which allows users to
+														attend/create challenges and have a scrape with others via the
+														platform. The users can share and like videos, create new
+														challenges and vote other’s challenges via the platform.
                         </div>
                       </div>
                     </div>
@@ -444,25 +437,45 @@
                             data-parent="#accordion"
                             href="#collapseTwo"
                           >
-                            <span class="fa fa-plus"></span> How do I setup this
-                            App?
+                            <span class="fa fa-plus"></span>Could you tell more about challenges?
                           </a>
                         </h4>
                       </div>
                       <div id="collapseTwo" class="panel-collapse collapse">
                         <div class="panel-body">
-                          Anim pariatur cliche reprehenderit, enim eiusmod high
-                          life accusamus terry richardson ad squid. 3 wolf moon
-                          officia aute, non cupidatat skateboard dolor brunch.
-                          Food truck quinoa nesciunt laborum eiusmod. Brunch 3
-                          wolf moon tempor, sunt aliqua put a bird on it squid
-                          single-origin coffee nulla assumenda shoreditch et.
-                          Nihil anim keffiyeh helvetica, craft beer labore wes
-                          anderson cred nesciunt sapiente ea proident. Ad vegan
-                          excepteur butcher vice lomo. Leggings occaecat craft
-                          beer farm-to-table, raw denim aesthetic synth nesciunt
-                          you probably haven't heard of them accusamus labore
-                          sustainable VHS.
+													<p>There are 3 challenge types: RiseApp Challenges, Community Challenges (Buckets) and Sponsored Challenges.</p>
+													<br />
+													<h6>RiseApp Challenges</h6>
+													<p>
+														Every day, RiseApp challenges its community with a new topic. It is usually something related to the meaning of the day. (e.g. Surprise Your Mother on mothers day.)
+													</p>
+													<br />
+													<h6>Community Challenges (Bucket)</h6>
+													<p>
+														RiseApp Community can also
+														decide what the next day's challenge is going
+														to be. Everyone can vote for the ideas in the
+														“Bucket” but only the users with enough
+														badges can submit their ideas for voting.
+													</p>
+													<br />
+													<h6>Sponsored Challenges</h6>
+													<p>
+															One of three daily challenges is booked for Sponsored Partners. Partners can launch their ad campaigns as a challenge and encourage people with giveaways to make a video to spread their ad campaigns.
+													</p>
+													<br />
+													<p>
+															Each and every challenge is active for 24 hours for submitting, 48 hours for voting.
+													</p>
+													<p>
+															Users can:
+															<br />
+															- Submit for today's challenge
+															<br />
+															- Vote for today's challenge
+															<br />
+															- Vote for yesterdays challenge
+													</p>
                         </div>
                       </div>
                     </div>
@@ -482,80 +495,7 @@
                       </div>
                       <div id="collapseThree" class="panel-collapse collapse">
                         <div class="panel-body">
-                          Anim pariatur cliche reprehenderit, enim eiusmod high
-                          life accusamus terry richardson ad squid. 3 wolf moon
-                          officia aute, non cupidatat skateboard dolor brunch.
-                          Food truck quinoa nesciunt laborum eiusmod. Brunch 3
-                          wolf moon tempor, sunt aliqua put a bird on it squid
-                          single-origin coffee nulla assumenda shoreditch et.
-                          Nihil anim keffiyeh helvetica, craft beer labore wes
-                          anderson cred nesciunt sapiente ea proident. Ad vegan
-                          excepteur butcher vice lomo. Leggings occaecat craft
-                          beer farm-to-table, raw denim aesthetic synth nesciunt
-                          you probably haven't heard of them accusamus labore
-                          sustainable VHS.
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="panel panel-default">
-                      <div class="panel-heading">
-                        <h4 class="panel-title">
-                          <a
-                            data-toggle="collapse"
-                            data-parent="#accordion"
-                            href="#collapseFour"
-                          >
-                            <span class="fa fa-plus"></span> What is your policy
-                            regarding privacy?
-                          </a>
-                        </h4>
-                      </div>
-                      <div id="collapseFour" class="panel-collapse collapse">
-                        <div class="panel-body">
-                          Anim pariatur cliche reprehenderit, enim eiusmod high
-                          life accusamus terry richardson ad squid. 3 wolf moon
-                          officia aute, non cupidatat skateboard dolor brunch.
-                          Food truck quinoa nesciunt laborum eiusmod. Brunch 3
-                          wolf moon tempor, sunt aliqua put a bird on it squid
-                          single-origin coffee nulla assumenda shoreditch et.
-                          Nihil anim keffiyeh helvetica, craft beer labore wes
-                          anderson cred nesciunt sapiente ea proident. Ad vegan
-                          excepteur butcher vice lomo. Leggings occaecat craft
-                          beer farm-to-table, raw denim aesthetic synth nesciunt
-                          you probably haven't heard of them accusamus labore
-                          sustainable VHS.
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="panel panel-default">
-                      <div class="panel-heading">
-                        <h4 class="panel-title">
-                          <a
-                            data-toggle="collapse"
-                            data-parent="#accordion"
-                            href="#collapseFive"
-                          >
-                            <span class="fa fa-plus"></span> Are there more help
-                            resources available?
-                          </a>
-                        </h4>
-                      </div>
-                      <div id="collapseFive" class="panel-collapse collapse">
-                        <div class="panel-body">
-                          Anim pariatur cliche reprehenderit, enim eiusmod high
-                          life accusamus terry richardson ad squid. 3 wolf moon
-                          officia aute, non cupidatat skateboard dolor brunch.
-                          Food truck quinoa nesciunt laborum eiusmod. Brunch 3
-                          wolf moon tempor, sunt aliqua put a bird on it squid
-                          single-origin coffee nulla assumenda shoreditch et.
-                          Nihil anim keffiyeh helvetica, craft beer labore wes
-                          anderson cred nesciunt sapiente ea proident. Ad vegan
-                          excepteur butcher vice lomo. Leggings occaecat craft
-                          beer farm-to-table, raw denim aesthetic synth nesciunt
-                          you probably haven't heard of them accusamus labore
-                          sustainable VHS.
+													No. You can download the app, sign up and start sharing challenges right away!
                         </div>
                       </div>
                     </div>
@@ -578,9 +518,7 @@
                   <h2 class="mu-heading-title">GET IN TOUCH</h2>
                   <span class="mu-title-dot"></span>
                   <p>
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever
+										If you have any questions, or simply want to contact us, feel free to drop a message!
                   </p>
                 </div>
 
@@ -639,14 +577,14 @@
                             <i class="fa fa-map-marker"></i>
                           </div>
                           <p><strong>Office Location</strong></p>
-                          <p>Dooley Branch Rd Millen, GA 30442, USA</p>
+                          <p>Reşitpaşa Mah. Katar Cad. Teknokent ARI 4 Binası No: 2 / 50 / 6 34467 Sarıyer / İstanbul / Turkey </p>
                         </div>
 
                         <div class="mu-contact-right-single">
                           <div class="mu-icon"><i class="fa fa-phone"></i></div>
                           <p><strong>Phone Number</strong></p>
-                          <p>+90 987 678 9834</p>
-                          <p>+90 567 098 785</p>
+                          <p>+90 537 399 7502</p>
+                          <p>+90 506 335 1768</p>
                         </div>
 
                         <div class="mu-contact-right-single">
@@ -654,18 +592,18 @@
                             <i class="fa fa-envelope"></i>
                           </div>
                           <p><strong>Email Address</strong></p>
-                          <p>contact@domain.com</p>
-                          <p>support@domain.com</p>
+                          <p>burakkelleroglu@gmail.com</p>
+                          <!-- <p>support@domain.com</p> -->
                         </div>
 
-                        <div class="mu-contact-right-single">
+                        <!-- <div class="mu-contact-right-single">
                           <div class="mu-social-media">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-google-plus"></i></a>
                             <a href="#"><i class="fa fa-linkedin"></i></a>
                             <a href="#"><i class="fa fa-youtube"></i></a>
-                          </div>
+                          </div> -->
                         </div>
                       </div>
                     </div>
@@ -688,7 +626,7 @@
         <div class="mu-footer-area">
           <p class="mu-copy-right">
             &copy; Copyright
-            <a rel="nofollow" href="http://riseapp.io">riseapp.io</a>. All right
+            <a rel="nofollow" href="#">RiseApp</a>. All right
             reserved.
           </p>
         </div>
